// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast Widget SelfServiceFlowSelect should render SelfServiceFlowSelect field 1`] = `
<InputField
  caseInsensitive={false}
  inline={false}
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value="flow"
/>
`;

exports[`ast Widget TagsSelect should render case sensitive TagsSelect field (tags properties) 1`] = `
<TagsSelectContainer
  caseInsensitive={false}
  deprecatedOptions={[]}
  description="Name of the tag. Keep it simple, a short 1 word tag is the best. The tag names are case sensitive."
  hiddenOptions={[]}
  multiple={true}
  onChange={[Function]}
  options={[]}
  type="tags-select"
  value="tag"
/>
`;

exports[`ast Widget TagsSelect should render component AssigneeTeamSelect 1`] = `
<Connect(AssigneeTeamSelectContainer)
  allowUnassign={false}
  description=""
  onChange={[Function]}
  options={[]}
  type="assignee_team-select"
/>
`;

exports[`ast Widget TagsSelect should render component AssigneeUserSelect 1`] = `
<Connect(AssigneeUserSelectContainer)
  allowUnassign={false}
  description=""
  onChange={[Function]}
  options={[]}
  type="assignee_user-select"
/>
`;

exports[`ast Widget TagsSelect should render multi TagsSelect field (addTags action) 1`] = `
<TagsSelectContainer
  caseInsensitive={false}
  description=""
  multiple={true}
  onChange={[Function]}
  options={[]}
  type="tags-select"
  value="hello, world, !"
/>
`;

exports[`ast Widget should render DatetimeSelect field 1`] = `
<div
  className="widget d-inline-block"
>
  <DatePicker
    initialSettings={
      {
        "endDate": "2018-03-28T21:59:32.580Z",
        "startDate": "2018-03-28T21:59:32.580Z",
      }
    }
    onSubmit={[Function]}
  >
    <div>
      <Input
        placeholder="Choose a date..."
        type="text"
        value="03/28/2018 9:59 PM"
      />
    </div>
  </DatePicker>
</div>
`;

exports[`ast Widget should render InputField (eq operator) 1`] = `
<InputField
  caseInsensitive={false}
  inline={false}
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value="hello world!"
/>
`;

exports[`ast Widget should render RichFieldWithVariables 1`] = `
<RichFieldWithVariables
  allowExternalChanges={true}
  isRequired={false}
  onChange={[Function]}
  placeholder=""
  value={
    {
      "html": "hello my good lad",
      "text": "foo bar",
    }
  }
  variableTypes={
    [
      "current_user",
      "ticket.customer",
      "shopify",
      "recharge",
      "magento2",
      "bigcommerce",
    ]
  }
/>
`;

exports[`ast Widget should render TimedeltaSelect field 1`] = `
<div
  className="widget d-inline-block"
>
  <TimedeltaPicker
    className="timedeltaPicker"
    min={1}
    onChange={[Function]}
    value="1d"
  />
</div>
`;

exports[`ast Widget should render case-insensitive MultiSelectField (containsAll operator) 1`] = `
<MultiSelectField
  allowCustomValues={true}
  caseInsensitive={true}
  className=" Text"
  onChange={[Function]}
  options={[]}
  plural="words"
  showSymbolOnSpaces={true}
  singular="word"
  values={
    [
      "hello",
      "world!",
    ]
  }
/>
`;

exports[`ast Widget should render humanized labels for ticket channel selection 1`] = `
<Select
  deprecatedOptions={[]}
  description="The channel used to communicate with the user on this ticket.If not specified, it will be filled with the channel of the first [TicketMessage](#TicketMessage-object) of this ticket."
  hiddenOptions={[]}
  onChange={[Function]}
  onSearchChange={[Function]}
  options={
    [
      {
        "label": "Aircall",
        "value": "aircall",
      },
      {
        "label": "Api",
        "value": "api",
      },
      {
        "label": "Chat",
        "value": "chat",
      },
      {
        "label": "Email",
        "value": "email",
      },
      {
        "label": "Facebook",
        "value": "facebook",
      },
      {
        "label": "Facebook Messenger",
        "value": "facebook-messenger",
      },
      {
        "label": "Internal Note",
        "value": "internal-note",
      },
      {
        "label": "Instagram Comment",
        "value": "instagram-comment",
      },
      {
        "label": "Phone",
        "value": "phone",
      },
      {
        "label": "SMS",
        "value": "sms",
      },
      {
        "label": "Twitter",
        "value": "twitter",
      },
    ]
  }
  sortOptions={true}
  type="select"
  value="contact_form"
/>
`;
